2011-08-14  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Add splint annotations.
	* src/su.c: Set caller_on_console as boolean.
	* src/su.c: Ignore retunr value from fputs (usage) / puts (prompt).
	* src/su.c: Improved memory management.

2011-08-14  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chgpasswd.c, src/chpasswd.c, src/newusers.c: Replace cflg by
	a test on crypt_method.

2011-08-14  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/chowndir.c: Add splint annotations.
	* src/chgpasswd.c: Likewise.
	* src/chpasswd.c: Likewise.
	* src/newusers.c: Likewise.
	* libmisc/salt.c, lib/prototypes.h (crypt_make_salt): Likewise.

2011-08-14  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/gshadow_.h: Fix typo in comment.

2011-08-14  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h, libmisc/getgr_nam_gid.c: getgr_nam_gid()
	returns an allocated structure.

2011-08-14  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Add annotations to indicate that su_failure() does
	not return.

2011-07-30  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Display PID as unsigned long.

2011-07-30  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Remove unused Zflg.

2011-07-30  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chgpasswd.c: Fix typo sp -> sg. sg_namp -> sg_name
	* src/chgpasswd.c: Always update the group file when SHADOWGRP is
	not enabled.

2011-07-30  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c: Fix typo in notreached annotation.

2011-07-30  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Add annotations to indicate that fail_exit() does
	not return.
	* src/usermod.c: Fix typo in notreached annotation.

2011-07-30  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/find_new_uid.c: free (used_uids) on return.